...
                        .foregroundStyle(.secondary)
                    HStack(alignment: .firstTextBaseline, spacing: 0) {
                        Text(weatherViewModel.getCelsiusTemperature())
                            .font(.system(size: .layoutValue32, weight: .medium, design: .rounded))
                            // Apply sliding and zooming animations when numerical values change (number change effects)
                            .contentTransition(.numericText())
                            .accessibilityIdentifier("cityTemperatureLabel")
                        Text("°")
                            .font(
                                .system(
                                    size: .layoutValue32,
                                    weight: .medium,
                                    design: .rounded
...
